--- a/epk.html
+++ b/epk.html
@@ -82,7 +82,7 @@
                         </a>
                 </li>
                                         <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="live.html" target="_blank"><span class="socicon socicon-youtube mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Live
+                    <a class="nav-link link text-white display-4" href="http://www.ladynewton.com/live" target="_blank"><span class="socicon socicon-youtube mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Live
                         </a>
                 </li></ul>
             
@@ -215,7 +215,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DlYoMP+T6YGWLKiCWtN8OxBoOluA2A4RV7IwX6U+hZqIBQ2+t0tG33GZlORwrd0snWhDm422UG6fJqyWXpc7PKPTqHkmf2XGziN0+CN7sWcOoxM/dESYfY9OyVJWAv32.w6HtutHmvOXKzzvtuUsLDOjDMVBwxOxh7Tjl1URwXOPKaFlLEcvTYPntCxFnQLmoyIfhrShVqz4AFuSWuNAxJDG/ysGQUG1PUIjLzthoYYs0aBQB7LIwei+UOSXZLOdv">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cqaZGhYz1EvPLyiG8GuYcPN1dsCWofFumaA4Li8Y2KYyzR1/tvr020ElJYdhGr80KLnws4RV9v1Q2cd9ttISU977hzUufSeFXa1cjlvqs3fqkLbHjNYEXzrEM13yal72.YYQ9Vv9Au9Nn0da9/MGQXKYS4c2vWyFF3/u6+0NVksD7WmdhayUr4+0AvBzsRpd3rPBcchr7vIJMxk1p/krsxeqUq0BuLqhGthrH00MbHlSVgMgNuhLwH+6ejtHP3hd/">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
@@ -305,7 +305,7 @@ Se preferir, entre em contato pelo nosso whatsapp
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><strong><a href="live.html" target="_blank" class="text-white"><b>Live</b></a></strong></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><strong><a href="http://www.ladynewton.com/live" target="_blank" class="text-white"><b>Live</b></a></strong></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
