--- a/espacodofa.html
+++ b/espacodofa.html
@@ -115,7 +115,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
                         </a>
                 </li>
                                         <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="live.html" target="_blank"><span class="socicon socicon-youtube mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Live
+                    <a class="nav-link link text-white display-4" href="http://www.ladynewton.com/live" target="_blank"><span class="socicon socicon-youtube mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Live
                         </a>
                 </li></ul>
             
@@ -179,7 +179,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
         </div>
 
         <div class="media-container-row pt-5">
-            <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="live.html" target="_blank">Visitar página da Live</a>
+            <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="http://www.ladynewton.com/live" target="_blank">Visitar página da Live</a>
                 <a class="btn btn-warning-outline display-4" href="https://www.youtube.com/channel/UCSvIbkRHKd4szCvhxex0coA?sub_confirmation=1" target="_blank"><span class="fa fa-youtube mbr-iconfont mbr-iconfont-btn"></span>Se Inscrever</a></div>
         </div>
     </div>
@@ -407,7 +407,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><strong><a href="live.html" target="_blank" class="text-white"><b>Live</b></a></strong></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><strong><a href="http://www.ladynewton.com/live" target="_blank" class="text-white"><b>Live</b></a></strong></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
